--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,42 @@
       <artifactId>webdrivermanager</artifactId>
       <version>5.1.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.6.2</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
+
   <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+      </plugin>
+      <plugin>
+        © geekbrains.ru 2
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.12</version>
+      </plugin>
+      <plugin>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>3.0.0-M5</version>
+      </plugin>
+      <!-- Лечение проблемы для mvn site: A required class was missing while
+      executing org.apache.maven.plugins:maven-site-plugin:3.3:site:
+      org/apache/maven/doxia/siterenderer/DocumentContent-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>3.7.1</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>3.0.0</version>
+      </plugin>
+    </plugins>
   </build>
 </project>
