--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,7 @@
 
           <buildDirectory>C:\Projects\web_test</buildDirectory>
         </configuration>
-      </plugin>
+      </plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>8</source><target>8</target></configuration></plugin>
     </plugins>
   </build>
 
